hcaptcha_derive/tests/compile_fail/complete_enum.stderr
error: Must derive on a struct

         = help: This macro can only be implemented on a struct.

               #[derive(Hcaptcha)]
               struct MyStruct {
                   #[captcha]
                   hcaptcha: String,
               }

 --> tests/compile_fail/complete_enum.rs:8:10
  |
8 | pub enum ContactEnum {
  |          ^^^^^^^^^^^
